added mobile modes

--- a/Fitness Club/css/style.css
+++ b/Fitness Club/css/style.css
@@ -50,9 +50,29 @@ nav {
 main {
     background-color: #fff;
     padding: 2%;
-    font-size: 1.25em;
+    font-size: 1.15em;
     clear: left;
     font-family: 'Roboto Slab', serif;
+}
+
+.tel-link {
+    background-color: #404040;
+    padding: 2%;
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.tel-link a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5em;
+    display: block;
+}
+
+.hours {
+    margin-left: 10%;
 }
 
 #weights, #cardio, #training {
