made about mobile friendly

--- a/Fitness Club/css/style.css
+++ b/Fitness Club/css/style.css
@@ -23,6 +23,10 @@ body, header, nav, main, footer, h1, div, img, ul {
   font-style: normal;
 }
 
+.round {
+    border-radius: 8px;
+}
+
 body {
 background-color: #000;
 }
@@ -76,26 +80,24 @@ main {
 }
 
 #weights, #cardio, #training {
-    width: 29%;
-    float: left;
     margin: 0 2%;
 }
 
-#exercises {
+/* #exercises {
     clear: left;
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
     background-color: #f2f2f2;
     padding: 1% 2%;
-}
+} */
 
-#exercises dt {
+/* #exercises dt {
     font-weight: bold;
-}
+} */
 
-#exercises dd {
+/* #exercises dd {
     padding: 0.5% 1% 2% 0;
-}
+} */
 
 #contact {
     align-content: center;
